--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,10 +39,10 @@
     <div id="main" role="main" class="container">
       {{ content }}
       <div class="challenges"> 
+        <a href="{{ site.baseurl }}/treasure-challenge">Treasure Challenge</a>            
+        <a href="{{ site.baseurl }}/maze-challenge">Maze Challenge</a>
         <a href="{{ site.baseurl }}/api-challenge">Spotify Song Challenge</a>
-        <a href="{{ site.baseurl }}/challenge-2">Challenge 2</a>            
-        <a href="{{ site.baseurl }}/challenge-3">Challenge 3</a>
-        <a href="{{ site.baseurl }}/challenge-4">Challenge 4</a>
+        <a href="{{ site.baseurl }}/design-challenge">Design Challenge</a>
       </div>
     </div>
 
