Update the final page and css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,12 +38,12 @@
 
     <div id="main" role="main" class="container">
       {{ content }}
-      <div class="challenges"> 
+      <!-- <div class="challenges"> 
         <a href="{{ site.baseurl }}/treasure-challenge">Treasure Challenge</a>            
         <a href="{{ site.baseurl }}/maze-challenge">Maze Challenge</a>
         <a href="{{ site.baseurl }}/api-challenge">Spotify Song Challenge</a>
         <a href="{{ site.baseurl }}/html-challenge">Design Challenge</a>
-      </div>
+      </div> -->
     </div>
 
     <div class="wrapper-footer">
