--- a/_layouts/maze-page.html
+++ b/_layouts/maze-page.html
@@ -10,13 +10,13 @@ layout: default
     {{ content }}
   </div>
 
-  <div>
+  <div style="text-align:center">
     <input id="mazeInput" class="maze-input"></input>
   </div>
-  <div>
+  <div style="text-align:center">
     <button onclick="myFunction()">SUBMIT</button>
   </div>
-  <div>
+  <div style="text-align:center; margin:15px;">
     <a id="continue"></a>
   </div>
 
