--- a/_layouts/treasure-page.html
+++ b/_layouts/treasure-page.html
@@ -9,13 +9,13 @@ layout: default
   <div class="entry">
     {{ content }}
     </div>
-    <div>
+    <div style="text-align:center">
       <input id="treasureInput" class="treasure-input"></input>
     </div>
-    <div>
+    <div style="text-align:center">
       <button onclick="myFunction()">SUBMIT</button>
     </div>
-    <div>
+    <div style="text-align:center; margin:15px;">
       <a id="continue"></a>
     </div>
 
