--- a/style.scss
+++ b/style.scss
@@ -87,6 +87,12 @@ a {
   }
 }
 
+.aDiv{
+  margin: auto;
+  width: 50%;
+  text-align: center;
+}
+
 ul, ol {
   margin: 15px 0;
   padding-left: 30px;
@@ -373,11 +379,28 @@ footer {
 }
 
 input {
-  height: 30px;
+  height: 50px;
   width: 206px;
-  font-size: 14px;
+  font-size: 16px;
   margin-top: 10px;
   margin-bottom: 10px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+button {
+  background-color: #4286f4;
+  border: none;
+  color: white;
+  padding: 5px 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  height: 40px;
+  width: 70px;
+  border-radius: 5px;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
