CSS in line with HTML so good.

--- a/_layouts/api-page.html
+++ b/_layouts/api-page.html
@@ -16,7 +16,7 @@ layout: default
   <div>
     <button onclick="myFunction()">SUBMIT</button>
   </div>
-  <div>
+  <div style="margin:15px;">
     <a id="continue"></a>
   </div>
 
