--- a/_layouts/html-page.html
+++ b/_layouts/html-page.html
@@ -10,13 +10,13 @@ layout: default
     {{ content }}
   </div>
 
-  <div>
+  <div style="text-align:center;">
     <input id="htmlInput" class="html-input"></input>
   </div>
-  <div>
+  <div style="text-align:center;">
     <button onclick="myFunction()">SUBMIT</button>
   </div>
-  <div>
+  <div style="text-align:center; margin:15px;">
     <a id="continue"></a>
   </div>
 
