more lovely css

--- a/_layouts/final-page.html
+++ b/_layouts/final-page.html
@@ -65,6 +65,9 @@ layout: default
           document.getElementById("chestDiv").style.display = "block";
         } else {
           document.getElementById("continue").innerHTML = "Sorry that's not right, try again!";
+          document.getElementById("continue").style.color = "red";
+          document.getElementById("continue").style.marginTop = "15px";
+          document.getElementById("continue").style.marginBottom = "15px";
         }
         
     }
