--- a/_layouts/search-page.html
+++ b/_layouts/search-page.html
@@ -9,5 +9,10 @@ layout: default
   <div class="entry">
     {{ content }}
   </div>
+  <div class="click-text">
+    Click the link below to begin.
+    <a href="http://localhost:8888/" class="challenge-button">Start Challenge</a>
+  </div>
+
 
 </article>
