--- a/style.scss
+++ b/style.scss
@@ -363,6 +363,18 @@ footer {
   display: none;
 }
 
+.click-text {
+  text-align: center;
+  margin: 0 auto;
+  font-size: 3em;
+}
+
+.challenge-button {
+  text-align: center;
+  margin: 0 auto;
+  font-size: 3em;
+}
+
 .congrats {
   display: none;
 }
