--- a/_layouts/search-page.html
+++ b/_layouts/search-page.html
@@ -11,7 +11,9 @@ layout: default
   </div>
   <div class="click-text">
     Click the link below to begin.
-    <a href="http://localhost:8888/" class="challenge-button">Start Challenge</a>
+    <div class="challenge-button">
+      <a href="http://localhost:8888/">Start Challenge</a>
+    </div>
   </div>
 
 
