--- a/style.scss
+++ b/style.scss
@@ -369,6 +369,11 @@ footer {
   font-size: 1.5em;
 }
 
+.link-button {
+  text-align: center;
+  margin: 0 auto;
+}
+
 .challenge-button {
   text-align: center;
   margin: 0 auto;
