--- a/_layouts/api-page.html
+++ b/_layouts/api-page.html
@@ -10,14 +10,14 @@ layout: default
     {{ content }}
   </div>
 
-  <div class="centered">
+  <div class="h3">
       Click the button below to see what information you get from the search: 
     <div class="link-button">
       <a href="https://mknawalaniec.github.io/spotify-search/" class="btn btn-default">Search for Run the World</a>
     </div>
   </div>
 
-  <div class="centered">
+  <div class="h3">
     Enter the correct number to complete the challenge.
   </div>
   <div>
