Updated css on pages

--- a/_layouts/final-page.html
+++ b/_layouts/final-page.html
@@ -12,7 +12,10 @@ layout: default
 
   
   <div id="firstDiv">
-    <div>What did the Octopus say you would find once you made it to shore?</div>
+    <div>Way to complete all the challenges!  Now you just have to put together some of the answers you gathered during your time in the ocean to escape!</div>
+    <div><br></div>
+    <div>First things first, what did you enter into the box on the first challenge that might be something you find on the shore?</div>
+    <p>Hint: look at the red paper!</p>
     <input id="answer"></input>
     <div><button onclick="firstFunction()">Submit</button></div>
     <div id="continue"></div>
@@ -20,7 +23,7 @@ layout: default
 
   
   <div id="chestDiv" class="chestDiv">
-    <div>Now use the other numbers you entered in the ocean to help open your treasure chest!</div>
+    <div>Nice work!  Now use the other numbers you entered in the ocean to help open your treasure chest!</div>
     <p style="font-size: 14px">Hint: <br>How many loops did you use to get through the seaweed? <br>What was the popularity of the song you found?
     <br>How many lines of code did you update to change the fish's color?</p>
     <div id="chest" class="chest">
@@ -33,7 +36,7 @@ layout: default
   </div>
 
 <div id="congrats" class="congrats">
-  <div>You did it</div>
+  <div>Congratulations!!!  You escaped the ocean!  Way to work together as a team and use many coding concepts to master the challenges and become a developer.  We hope you had an awesome time.  Be sure to grab a picture at the photo area and a list of sites where you can contine to grow your software development skills!</div>
 </div>
 
 <script>
