--- a/style.scss
+++ b/style.scss
@@ -363,6 +363,10 @@ footer {
   display: none;
 }
 
+.section {
+  padding-bottom: 30px;
+}
+
 .click-text {
   text-align: center;
   margin: 0 auto;
