--- a/style.scss
+++ b/style.scss
@@ -379,6 +379,10 @@ footer {
   padding-bottom: 20%;
 }
 
+.spotify-link {
+  color: rgb(0, 174, 255);
+}
+
 .challenge-button {
   text-align: center;
   margin: 0 auto;
