--- a/_layouts/search-page.html
+++ b/_layouts/search-page.html
@@ -9,6 +9,9 @@ layout: default
   <div class="entry">
     {{ content }}
   </div>
+  <div class="h3">
+    Challenge: Find the popularity number of the song 'Under the Sea' from the Little Mermaid Soundtrack!
+  </div>
   <div class="click-text">
     Click the link below to begin.
     <div class="challenge-button">
