--- a/_layouts/api-page.html
+++ b/_layouts/api-page.html
@@ -11,9 +11,11 @@ layout: default
   </div>
 
   <div class="section">
-    <div class="h3">How does the Spotify API work?</div>
+    <div class="h2">How does the Spotify API work?</div>
     A website address usually looks something like:
-    <a href="https://www.spotify.com/us"></a>
+    <div class="spotify-link">
+        "https://www.spotify.com/us"
+      </div>
   </div>
 
   <div class="section">
