--- a/_layouts/api-page.html
+++ b/_layouts/api-page.html
@@ -58,15 +58,6 @@ layout: default
 
   <div class="section">
     <div class="h3">
-      Let's tell Spotify that we are searching for a track:
-    </div>
-    <div class="spotify-link">
-      https://api.spotify.com/v1/search?q=Run%20the%20World&type=track
-    </div>
-  </div>
-
-  <div class="section">
-    <div class="h3">
       Let's tell Spotify that we only want songs from the United States:
     </div>
     <div class="spotify-link">
@@ -101,7 +92,7 @@ layout: default
   </div>
 
   <div class="h3">
-    Enter the correct number to complete the challenge.
+    Enter the popularity number of Under the Sea to complete the challenge.
   </div>
   <div>
     <input id="apiInput" class="api-input"></input>
